--- a/Manpower_MVC/Views/EmpSal/Print.cshtml
+++ b/Manpower_MVC/Views/EmpSal/Print.cshtml
@@ -8,6 +8,10 @@
 
 <html>
 <head>
+    @if (ViewBag.month < 10)
+    {
+        ViewBag.month = "0" + ViewBag.month;
+    }
     <title>@ViewBag.year/@ViewBag.month  月份員工薪資總表</title>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
