--- a/Manpower_MVC/Views/Shared/_Layout.cshtml
+++ b/Manpower_MVC/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Content/css/icheck/blue.min.css" rel="stylesheet">
     @Styles.Render("~/Bundles/css")
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt-1.10.15/jqc-1.12.4,dt-1.10.15,b-1.3.1,se-1.2.2/datatables.min.css" />
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
