--- a/Manpower_MVC/Views/Home/a01.cshtml
+++ b/Manpower_MVC/Views/Home/a01.cshtml
@@ -2,8 +2,17 @@
 @{
     ViewBag.Title = "點工人事資料";
 }
+<style>
+    tr.row-color > td {
+        background-color:#CCCCCC;
+    }
+</style>
 
-<table id='example' class='table' cellspacing='0' width='100%'>
+<p>
+    <input type="button" value="列印" class="btn btn-success" onclick="window.open('@Url.Action("../Employee/Print")')" />
+</p>
+
+<table id='tbEmp' class='table table-striped table-bordered dataTable cell-border' cellspacing='0' width='100%'>
     <thead>
         <tr>
             <th>
@@ -29,28 +38,51 @@
             </th>
         </tr>
     </thead>
+</table><br />
+
+<table id='tbIns' class='table table-striped table-bordered dataTable cell-border' cellspacing='0' width='100%'>
+    <thead>
+        <tr>
+            <th>
+                項目代號
+            </th>
+            <th>
+                項目名稱
+            </th>
+            <th>
+                加項/減項
+            </th>
+            <th>
+                金額
+            </th>
+            <th>
+                備註
+            </th>
+        </tr>
+    </thead>
 </table>
 
 @section pagesection{
-    <script charset='utf-8'>
+    <script charset="utf-8">
         // use a global for the submit and return data rendering in the examples
         $(document).ready(function () {
-            var editor = new $.fn.dataTable.Editor({
+
+            var empEditor = new $.fn.dataTable.Editor({
                 ajax: {
                     create: {
                         type: 'POST',
-                        url: '../api/emp/create',
+                        url: '../emp/create',
                     },
                     edit: {
                         type: 'PUT',
-                        url: '../api/emp/edit',
+                        url: '../emp/edit',
                     },
                     remove: {
                         type: 'POST',
-                        url: '../api/emp/remove',
+                        url: '../emp/remove',
                     }
                 },
-                table: '#example',
+                table: '#tbEmp',
                 idSrc: 'ID',
                 fields: [{
                     label: '工號',
@@ -76,13 +108,36 @@
                     type: 'datetime',
                     def: function () { return new Date(); }
                 }
-                ]
+                ],
+                i18n: {
+                    create: {
+                        button: "create",
+                        title: "新增點工人事資料",
+                        submit: "新增"
+                    },
+                    edit: {
+                        button: "edit",
+                        title: "編輯點工人事資料",
+                        submit: "更新"
+                    },
+                    remove: {
+                        button: "delete",
+                        title: "刪除新增點工人事資料",
+                        submit: "刪除",
+                        confirm: {
+                            "_": "您確定要刪除 %d 筆資料?",
+                            "1": "您確定要刪除 1 筆資料?"
+                        }
+                    }
+                }
             });
-
-            $('#example').DataTable({
-                dom: 'Bfrtip',
+            var tbEmp = $('#tbEmp').DataTable({
+                language: {
+                    url: "../Content/dataTables.Chinese.traditional.txt"
+                },
+                dom: 'lfrtipB',
                 ajax: {
-                    url: '../api/emp/get',
+                    url: '../emp/get',
                     type: 'GET',
                 },
                 columns: [
@@ -94,39 +149,137 @@
                     { data: 'ConPersonTel' },
                     { data: 'CreateDate' }
                 ],
-                select: true,
+                select: {
+                    style: 'single',
+                    className: 'selected row-color'
+                },
+                displayLength: 5,
+                lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]],
                 buttons: [
                     {
                         extend: 'create',
                         text: '新增',
-                        editor: editor
+                        editor: empEditor,
                     },
                     {
                         extend: 'edit',
                         text: '修改',
-                        editor: editor
+                        editor: empEditor,
+                        className: 'btn-warning'
                     },
                     {
                         extend: 'remove',
                         text: '刪除',
-                        editor: editor
+                        editor: empEditor,
+                        className: 'btn-danger',
+                        formMessage: function (editor, dt) {
+                            var rowData = dt.row({ selected: true }).data();
+                            return '您確定要刪除 ' + rowData.EmpName + ' 的資料？';
+                        }
                     }
                 ]
             });
-            editor.on('open', function () {
-                table.keys.disable();
+
+            tbEmp.on('select', function (e, dt, type, indexes) {
+                if (type === 'row') {
+                    var data = tbEmp.rows(indexes).data().pluck('ID');
+                    
+                    // do something with the ID of the selected items
+                }
             });
 
-            editor.on('close', function () {
-                table.keys.enable();
+            var insEditor = new $.fn.dataTable.Editor({
+                ajax: {
+                    create: {
+                        type: 'POST',
+                        url: '../ins/create',
+                    },
+                    edit: {
+                        type: 'PUT',
+                        url: '../ins/edit',
+                    },
+                    remove: {
+                        type: 'POST',
+                        url: '../ins/remove',
+                    }
+                },
+                table: '#tbIns',
+                idSrc: 'ID',
+                fields: [{
+                    label: '項目名稱',
+                    name: 'InsID'
+                }, {
+                    label: '金額',
+                    name: 'Price'
+                }, {
+                    label: '備註',
+                    name: 'Remark'
+                }],
+                i18n: {
+                    create: {
+                        button: "create",
+                        title: "新增點工人事資料",
+                        submit: "新增"
+                    },
+                    edit: {
+                        button: "edit",
+                        title: "編輯點工人事資料",
+                        submit: "更新"
+                    },
+                    remove: {
+                        button: "delete",
+                        title: "刪除新增點工人事資料",
+                        submit: "刪除",
+                        confirm: {
+                            "_": "您確定要刪除 %d 筆資料?",
+                            "1": "您確定要刪除 1 筆資料?"
+                        }
+                    }
+                }
             });
-
-            $('a.toggle-vis').on('click', function (e) {
-                e.preventDefault();
-                // Get the column API object
-                var column = table.column($(this).attr('data-column'));
-                // Toggle the visibility
-                column.visible(!column.visible());
+            $('#tbIns').DataTable({
+                language: {
+                    url: "../Content/dataTables.Chinese.traditional.txt"
+                },
+                dom: 'lfrtipB',
+                ajax: {
+                    url: '../ins/get',
+                    type: 'GET'
+                },
+                columns: [
+                    { data: 'ID' },
+                    { data: 'Price' },
+                    { data: 'InsID' },
+                    { data: 'EmpID' },
+                    { data: 'Remark' }
+                ],
+                select: {
+                    style: 'single',
+                    className: 'selected row-color'
+                },
+                buttons: [
+                    {
+                        extend: 'create',
+                        text: '新增',
+                        editor: insEditor,
+                    },
+                    {
+                        extend: 'edit',
+                        text: '修改',
+                        editor: insEditor,
+                        className: 'btn-warning'
+                    },
+                    {
+                        extend: 'remove',
+                        text: '刪除',
+                        editor: insEditor,
+                        className: 'btn-danger',
+                        formMessage: function (editor, dt) {
+                            var rowData = dt.row({ selected: true }).data();
+                            return '您確定要刪除 ' + rowData.EmpName + ' 的資料？';
+                        }
+                    }
+                ]
             });
         });
     </script>
