--- a/Manpower_MVC/Views/Employee/Index.cshtml
+++ b/Manpower_MVC/Views/Employee/Index.cshtml
@@ -1,146 +1,286 @@
-﻿@model IEnumerable<Manpower_MVC.Models.Employee>
-
+﻿
 @{
     ViewBag.Title = "點工人事資料";
 }
-
+<style>
+    tr.selected > td {
+        background-color: #CCCCCC;
+    }
+</style>
 <p>
     <h4>點工人事資料列表</h4>
 </p>
 <p>
-    <input type="button" value="建立點工人事資料" class="btn btn-primary" onclick="location.replace('@Url.Action("Create")')" />
+    
 </p>
 <p>
     <input type="button" value="列印點工人事資料" class="btn btn-success" onclick="window.open('@Url.Action("Print")')" />
 </p>
 
-<table id="example" class="display" cellspacing="0" width="100%">
-    <thead>
+<table id="tEmp" class="table table-bordered" cellspacing="0" width="100%">
+    <thead class="thead-inverse">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.EmpID)
+                工號
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EmpName)
+                姓名
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tel)
+                電話
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Phone)
+                手機
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConPerson)
+                緊急連絡人
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConPersonTel)
+                緊急連絡電話
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
+                建立日期
             </th>
         </tr>
     </thead>
-    <tfoot>
+    <tfoot class="thead-inverse">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.EmpID)
+                工號
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EmpName)
+                姓名
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tel)
+                電話
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Phone)
+                手機
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConPerson)
+                緊急連絡人
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConPersonTel)
+                緊急連絡電話
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
+                建立日期
             </th>
         </tr>
     </tfoot>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr test ="@item.ID">
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmpID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmpName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Tel)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ConPerson)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ConPersonTel)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreateDate)
-                </td>
-            </tr>
-        }
-    </tbody>
-
+    <tbody></tbody>
 </table>
 
-<input id="ins" disabled="disabled" type="button" value="勞健加減項" class="btn btn-info" />
-<input id="edit" disabled="disabled" type="button" value="編輯" class="btn btn-warning" />
+<input id="create" type="button" value="建立" class="btn btn-primary" data-toggle="modal" data-target="#empDiv" />
+<input id="edit" disabled="disabled" type="button" value="編輯" class="btn btn-warning" data-toggle="modal" data-target="#empDiv" />
 <input id="del" disabled="disabled" type="button" value="刪除" class="btn btn-danger " />
+
+<div></div>
+
+<table id="tIns" class="table table-bordered" cellspacing="0" width="100%">
+    <thead class="thead-inverse">
+        <tr>
+            <th>
+                次號
+            </th>
+            <th>
+                項目代號
+            </th>
+            <th>
+                項目名稱
+            </th>
+            <th>
+                加項/減項
+            </th>
+            <th>
+                金額
+            </th>
+            <th>
+                備註
+            </th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+
+<input id="insCreate" type="button" value="建立" class="btn btn-primary" />
+<input id="insEdit" disabled="disabled" type="button" value="編輯" class="btn btn-warning" />
+<input id="insDel" disabled="disabled" type="button" value="刪除" class="btn btn-danger " />
 
 @section pagesection{
     <script>
         $(document).ready(function () {
-            var table = $('#example').DataTable({
-                "scrollY": "275px",
-                "paging": false
-            });
+            $.ajax({
+                    url: '@Url.Action("Emp")',
+                    type: 'GET',
+                    dataType: "json",
+                    success: function (data) {
+                        $('#tEmp tbody tr').remove();
+                        $.each(data, function (index, item) {
+                            $('#tEmp tbody').append(
+                                "<tr id='" + item.ID + "'><td>" + item.EmpID + "</td>" +
+                                "<td>" + item.EmpName + "</td>" +
+                                "<td>" + item.Tel + "</td>" +
+                                "<td>" + item.Phone + "</td>" +
+                                "<td>" + item.ConPerson + "</td>" +
+                                "<td>" + item.ConPersonTel + "</td>" +
+                                "<td>" + (JSON.parseWithDate(JSON.stringifyWcf(item.CreateDate))).f("yyyy-MM-dd") + "</td></tr>"
+                            );
+                        })
+                    }
+                })
 
-            $('a.toggle-vis').on('click', function (e) {
-                e.preventDefault();
-                // Get the column API object
-                var column = table.column($(this).attr('data-column'));
-                // Toggle the visibility
-                column.visible(!column.visible());
-            });
-
-            $('#example tbody').on('click', 'tr', function () {
+            $('#tEmp tbody').on('click', 'tr', function () {
+                $.ajax({
+                    url: '@Url.Action("ListEmpIns")',
+                    type: 'GET',
+                    data: { id: $(this).attr('id') },
+                    dataType: "json",
+                    success: function (data) {
+                        $('#tIns tbody tr').remove();
+                        var i = 0;
+                        $.each(data, function (index, item) {
+                            i++;
+                            $('#tIns tbody').append(
+                                "<tr id='" + item.ID + "'><td>" + i + "</td>" +
+                                "<td>" + item.InsID + "</td>" +
+                                "<td>" + item.InsName + "</td>" +
+                                "<td>" + item.PosOrNeg + "</td>" +
+                                "<td>" + item.Price + "</td>" +
+                                "<td>" + item.Remark + "</td></tr>"
+                            );
+                        })
+                    }
+                })
                 if ($(this).hasClass('selected')) {
                     $(this).removeClass('selected');
-                    $('#ins').attr('disabled', true);
                     $('#edit').attr('disabled', true);
                     $('#del').attr('disabled', true);
                 }
                 else {
-                    table.$('tr.selected').removeClass('selected');
+                    $('#tEmp tbody').children('.selected').removeClass('selected');
                     $(this).addClass('selected');
-                    $('#ins').attr('disabled', false);
                     $('#edit').attr('disabled', false);
                     $('#del').attr('disabled', false);
                 }
             });
 
-            $('#ins').click(function () {
-                location.replace('/Employee/ListEmpIns/' + $('.selected').attr('test'));
+            $('#tIns tbody').on('click', 'tr', function () {
+                if ($(this).hasClass('selected')) {
+                    $(this).removeClass('selected');
+                    $('#insEdit').attr('disabled', true);
+                    $('#insDel').attr('disabled', true);
+                }
+                else {
+                    $('#tIns tbody').children('.selected').removeClass('selected');
+                    $(this).addClass('selected');
+                    $('#insEdit').attr('disabled', false);
+                    $('#insDel').attr('disabled', false);
+                }
             });
+
+            $('#create').click(function () {
+                //$('#empForm div div').remove();
+                //$('#empForm div').append(
+                //    "<div class='form-group'>" +
+                //    "<label for='EmpID'>工號</label>" +
+                //    "<input type='text' class='form-control' id='EmpID' name='EmpID' required='required' />" +
+                //    "</div>" +
+                //    "<div class='form-group'>" +
+                //    "<label for='EmpName'>姓名</label>" +
+                //    "<input type='text' class='form-control' id='EmpName' name='EmpName' required='required' />" +
+                //    "</div>" +
+                //    "<div class='form-group'>" +
+                //    "<label for='Tel'>電話</label>" +
+                //    "<input type='text' class='form-control' id='Tel' name='Tel' />" +
+                //    "</div>" +
+                //    "<div class='form-group'>" +
+                //    "<label for='Phone'>手機</label>" +
+                //    "<input type='text' class='form-control' id='Phone' name='Phone' />" +
+                //    "</div>" +
+                //    "<div class='form-group'>" +
+                //    "<label for='ConPerson'>緊急連絡人</label>" +
+                //    "<input type='text' class='form-control' id='ConPerson' name='ConPerson' />" +
+                //    "</div>" +
+                //    "<div class='form-group'>" +
+                //    "<label for='ConPersonTel'>緊急連絡電話</label>" +
+                //    "<input type='text' class='form-control' id='ConPersonTel' name='ConPersonTel' />" +
+                //    "</div>"
+                //);
+                $('#empForm div').children('input:text').val('');
+                $('#empForm').attr('action', '@Url.Action("Create")');
+                $('#empForm').children('input:submit').val('新增');
+                $('#empForm').children('input:submit').removeClass('btn-warning');
+                $('#empForm').children('input:submit').addClass('btn-primary');
+            });
+
             $('#edit').click(function () {
+                $('#empForm').attr('action', '@Url.Action("Edit")');
+                $('#empForm').children('#EmpID').val('1236456789');
+                $('#empForm').children('input:submit').val('更新');
+                console.log($('.selected').children('#EmpID').val());
+            });
+
+            $('#del').click(function () {
+                if (window.confirm('確定要刪除')) {
+                    location.replace('/Employee/Delete/' + $('.selected').attr('test'));
+                }
+            });
+
+            $('#insCreate').click(function () {
                 location.replace('/Employee/Edit/' + $('.selected').attr('test'));
             });
-            $('#del').click(function () {
-                location.replace('/Employee/Delete/' + $('.selected').attr('test'));
+
+            $('#insEdit').click(function () {
+                location.replace('/Employee/Edit/' + $('.selected').attr('test'));
+            });
+
+            $('#insDel').click(function () {
+                if (window.confirm('確定要刪除')) {
+                    location.replace('/Employee/DeleteEmpIns/' + $('.selected').attr('test'));
+                }
             });
         });
     </script>
 }
+
+<div class="modal fade" id="empDiv" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                <h3 class="modal-title" id="lineModalLabel">建立員工資料</h3>
+            </div>
+            <div class="modal-body">
+                <form id="empForm" method="post" action="">
+                    <div></div>
+                    <div class='form-group'>
+                        <label for='EmpID'>工號</label>
+                        <input type='text' class='form-control' id='EmpID' name='EmpID' />
+                    </div>
+                    <div class='form-group'>
+                        <label for='EmpName'>姓名</label>
+                        <input type='text' class='form-control' id='EmpName' name='EmpName' />
+                    </div>
+                    <div class='form-group'>
+                        <label for='Tel'>電話</label>
+                        <input type='text' class='form-control' id='Tel' name='Tel' />
+                    </div>
+                    <div class='form-group'>
+                        <label for='Phone'>手機</label>
+                        <input type='text' class='form-control' id='Phone' name='Phone' />
+                    </div>
+                    <div class='form-group'>
+                        <label for='ConPerson'>緊急連絡人</label>
+                        <input type='text' class='form-control' id='ConPerson' name='ConPerson' />
+                    </div>
+                    <div class='form-group'>
+                        <label for='ConPersonTel'>緊急連絡電話</label>
+                        <input type='text' class='form-control' id='ConPersonTel' name='ConPersonTel' />
+                    </div>
+                    <input type='submit' class='btn' value='' />
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
